k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: p-project
  labels:
    name: p-project
